Updated input nodes
Signed-off-by: Prozilla <business@prozilla.dev>